--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@flexbase-eng/pay-with-flexbase.git": "1.0.0",
     "@mantine/core": "^4.2.1",
     "@mantine/form": "^4.2.1",
     "@mantine/hooks": "^4.2.1",
