--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
+        with:
+        registry-url: @flexbase-eng:registry=https://npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
       - name: yarn install
         run: yarn install
       - name: yarn deploy
