--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,10 +12,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
-        with:
-        registry-url: @flexbase-eng:registry=https://npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
       - name: yarn install
-        run: yarn install
+        run: |
+          npm set @flexbase-eng:registry=https://npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
+          yarn install
       - name: yarn deploy
         run: |
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
