--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-node@v2
       - name: yarn install
         run: |
-          npm set @flexbase-eng:registry=https://npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
+          npm config set @flexbase-eng:registry https://npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
           yarn install
       - name: yarn deploy
         run: |
