--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,10 +12,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
-      - name: yarn install
+      - name: login to github packages
         run: |
           npm config set @flexbase-eng:registry https://npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
-          yarn install
+          npm config list
+      - name: yarn install
+        run: yarn install
       - name: yarn deploy
         run: |
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
