--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@flexbase-eng/pay-with-flexbase": "^0.1.0",
     "@mantine/core": "^4.2.1",
     "@mantine/form": "^4.2.1",
     "@mantine/hooks": "^4.2.1",
@@ -15,6 +14,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/uuid": "^8.3.4",
+    "pay-with-flexbase": "^0.2.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
